--- a/themes/hugo-future-imperfect-slim/layouts/about/list.html
+++ b/themes/hugo-future-imperfect-slim/layouts/about/list.html
@@ -3,9 +3,9 @@
   {{ partial "head" . }}
   <body>
     {{ partial "site-header" . }}
-    <div id="wrapper">
-      {{ partial "site-intro" . }}
+    <div>
       <main id="site-main">
+        {{ partial "site-intro" . }}
         <article class="post">
           <header>
             <div class="title">
@@ -23,9 +23,6 @@
           </div>
         </article>
       </main>
-      {{ partial "site-sidebar" . }}
-      {{ partial "site-footer" . }}
-      {{ partial "scripts" . }}
     </div>
   </body>
 </html>
