--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -10,6 +10,30 @@ body {
   
 }
 
+.column-left-half{
+  float: left;
+  width: 50%;
+  height: 100%;
+  border: 1px solid white;
+  padding: 20px;
+}
+
+.column-left-half .h1, h1{
+  text-align: center;
+}
+
+.column-right-half .h1, h1{
+  text-align: center;
+}
+
+.column-right-half{
+  float: right;
+  width: 50%;
+  height: 100%;
+  border: 1px solid white;
+}
+
+
 input, select, textarea {
     color: #fff;
     font-family: "Source Sans Pro", Helvetica, sans-serif;
