--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -14,7 +14,6 @@ body {
   float: left;
   width: 50%;
   height: 100%;
-  border: 1px solid white;
   padding: 20px;
 }
 
@@ -30,7 +29,7 @@ body {
   float: right;
   width: 50%;
   height: 100%;
-  border: 1px solid white;
+  padding: 20px;
 }
 
 
