added background image to about me page

--- a/public/css/add-on.css
+++ b/public/css/add-on.css
@@ -10,6 +10,17 @@ body {
   
 }
 
+#site-about{
+    grid-area: main;
+    background-image: url(https://images.pexels.com/photos/1183099/pexels-photo-1183099.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    
+ }
+
+.about-me{
+  background: transparent !important;
+  
+}
+
 .column-left-half{
   float: left;
   width: 50%;
