--- a/themes/hugo-future-imperfect-slim/layouts/about/list.html
+++ b/themes/hugo-future-imperfect-slim/layouts/about/list.html
@@ -4,9 +4,9 @@
   <body>
     {{ partial "site-header" . }}
     <div>
-      <main id="site-main">
+      <main id="site-about">
         {{ partial "site-intro" . }}
-        <article class="post">
+        <article class="post about-me">
           <header>
             <div class="title">
               {{ if $.Scratch.Get "h1" }}
