push mountain background to entire site

--- a/themes/hugo-future-imperfect-slim/layouts/about/list.html
+++ b/themes/hugo-future-imperfect-slim/layouts/about/list.html
@@ -3,8 +3,8 @@
   {{ partial "head" . }}
   <body>
     {{ partial "site-header" . }}
-    <div>
-      <main id="site-about">
+    <div class ="parallax">
+      <main id="site-main">
         {{ partial "site-intro" . }}
         <article class="post about-me">
           <header>
