--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -4,10 +4,35 @@
   is an official part of the theme (ex. Pull Requests) should be included in main.css
   and follow the formatting and style given.
 */
+
+/*change body to transparent 
+and then add parallax and cc bf or b3 for dark transparency
+
 body {
   
-  background-color: #111111;
+  background-color: #11111180;
   
+}
+
+change post to 80 transparency
+
+*/
+
+body {
+  
+background-image: url(https://images.pexels.com/photos/1183099/pexels-photo-1183099.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+
+  /* Full height */
+  height: 100%; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 #site-about{
@@ -20,6 +45,29 @@ body {
   background: transparent !important;
   
 }
+
+.parallax { 
+  /* The image used */
+background-image: url(https://images.pexels.com/photos/1183099/pexels-photo-1183099.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+
+  /* Full height */
+  height: 100%; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media only screen and (max-device-width: 1366px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
+
 
 .column-left-half{
   float: left;
@@ -92,13 +140,19 @@ input, select, textarea {
 
 
 .post {
-    background: #181818;
+    background: #18181880;
     margin: 1.5em auto;
     padding: 1em;
     max-width: 55em;
     color: #fff;
 }
 
+
+#site-sidebar{
+  background: #18181880;
+  
+  
+}
 .mini-post {
   background: #181818 !important;
   color: #fff !important;
