--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -43,7 +43,7 @@ background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),url(
  }
 
 .about-me{
-  background: transparent !important;
+  
   
 }
 
@@ -137,7 +137,13 @@ input, select, textarea {
 
 
 #site-sidebar{
-  background: #18181880;
+
+  
+  
+}
+
+#site-footer{
+
   
   
 }
