--- a/themes/hugo-future-imperfect-slim/layouts/equity-research/content-single.html
+++ b/themes/hugo-future-imperfect-slim/layouts/equity-research/content-single.html
@@ -4,6 +4,7 @@
     {{ partial "share-buttons" . }}
   </section>
   {{ .Render "featured" }}
+    {{ partial "header_maincodefolding" . }}
   <div class="content">
     {{ .Content }}
   </div>
