--- a/themes/hugo-future-imperfect-slim/layouts/equity-research/single.html
+++ b/themes/hugo-future-imperfect-slim/layouts/equity-research/single.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Page.Language | default "en" }}">
   {{ partial "head" . }}
   <body>
-    {{ partial "site-header" . }}
+    {{ partial "content-header" . }}
     <div id="wrapper">
       {{ partial "site-intro" . }}
       <main id="site-main">
