added new about me page layout

--- a/public/css/add-on.css
+++ b/public/css/add-on.css
@@ -17,6 +17,55 @@ body {
 change post to 80 transparency
 
 */
+@import url(http://fonts.googleapis.com/css?family=Pacifico);
+
+@import url(https://fonts.googleapis.com/css?family=Arvo:700);
+@import url(https://fonts.googleapis.com/css?family=Seaweed+Script);
+body {
+  background-color: #222;
+}
+.plate {
+  width: 410px;
+  margin: 10% auto;
+}
+.shadow {
+  color: #fff;
+  font-family: "Pacifico";
+  text-align: center;
+}
+.header-script {
+  font-family: "Seaweed Script";
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  position: relative;
+  margin:0;
+}
+.header-script span {
+  background-color: #222;
+  padding: 0 0.3em;
+}
+.header-script:before {
+  content:"";
+  display: block;
+  position: absolute;
+  z-index:-1;
+  top: 50%;
+  width: 100%;
+  border-bottom: 3px solid #fff;
+}
+.zac {
+  font-size: 60px;
+  text-align: center;
+}
+.garland {
+  font-size: 60px;
+  text-align: center;
+}
+.text3 {
+  font-size: 100px;
+}
+
 
 body {
   
@@ -35,6 +84,7 @@ background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),url(
   background-size: cover;
 
 }
+
 
 #site-about{
     grid-area: main;
@@ -125,6 +175,12 @@ input, select, textarea {
     color: #fff;
 }
 
+#site-intro-about .socnet-icons li, #site-footer .socnet-icons li {
+    margin: 0 .5em;
+    min-width: 20px;
+    list-style-type: none;
+    color: black;
+}
 
 
 .post {
@@ -147,6 +203,14 @@ input, select, textarea {
   
   
 }
+
+#site-intro-about .socnet-icons, #site-footer .socnet-icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-left: 0;
+    color: black;
+}
 .mini-post {
   background: #181818 !important;
   color: #fff !important;
@@ -161,6 +225,31 @@ h1, h2, h3, h4, h5, h6 {
   
 }
 
+#site-intro-about {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0.5em;
+    padding: 1em;
+    text-align: center;
+    color: black;
+}
+
+
+#site-intro-about > footer > ul.socnet-icons li a {
+    font-size: 20px;
+    line-height: 40px;
+    display: block;
+    width: 40px;
+    height: 40px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    color: white;
+    border-radius: 100%;
+    outline: none;
+    background-color: #212529;
+}
 
 ul a {
   color:#fff ;
@@ -192,6 +281,17 @@ a {
     color: #787878;
 
 
+}
+
+
+
+#particles-js{
+    position: absolute;
+    width: 100%;
+    height: 1000px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
 }
 
 
