--- a/themes/hugo-future-imperfect-slim/layouts/partials/head.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/head.html
@@ -26,4 +26,5 @@
   {{ .Scratch.Set "Permalink" .Permalink }}
   {{ .Scratch.Set "Title" .Title }}
   {{ .Scratch.Set "Author" .Author }}
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
