--- a/themes/hugo-future-imperfect-slim/layouts/partials/scripts.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/scripts.html
@@ -15,4 +15,7 @@
     <script src="{{ . | relURL }}"></script>
   {{ end }}
 {{ end }}
+  <script src={{ "js/particles.js" | relURL }}></script>
+  <script src={{ "js/app.js" | relURL }}></script>
+  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 {{ template "_internal/google_analytics_async.html" . }}
