changed particles source

--- a/themes/hugo-future-imperfect-slim/layouts/partials/scripts.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/scripts.html
@@ -17,5 +17,5 @@
 {{ end }}
   <script src={{ "js/particles.js" | relURL }}></script>
   <script src={{ "js/app.js" | relURL }}></script>
-  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src={{ "js/particles.min.js" | relURL }}></script>
 {{ template "_internal/google_analytics_async.html" . }}
