--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -1,3 +1,5 @@
+
+
 /*
   This css file is for individual users to restyle items for their personal site,
   or for the implementation of features specifically for their site. Anything that
@@ -18,6 +20,31 @@ change post to 80 transparency
 
 */
 
+.descrip{
+  background: #000000CC;
+  margin: auto;
+  padding: 1em;
+  max-width: 80em; 
+  color: #fff;
+  
+}
+
+.zg-container{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+}
+
+.zg-row{
+    display: flex;
+    max-width: 80em;
+    margin: auto;
+    padding: 10em;
+  
+}
 
 body {
   background-color: #222;
@@ -65,6 +92,27 @@ body {
 }
 
 
+.zg-logo {
+  margin: 15px;
+  color: #69b3a2;
+  font-size: 45px;
+  padding: 30px;
+  border-radius: 50%;
+  border-color: black;
+  border-width: 5px;
+  border: solid;
+}
+.zg-logo:hover {
+  color: white;
+  background-color: #69b3a2;
+}
+
+.text-center{
+  text-align: center;
+  
+}
+
+
 body {
   
 background-image: url(https://images.pexels.com/photos/1183099/pexels-photo-1183099.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
@@ -101,6 +149,12 @@ background-image: url(https://images.pexels.com/photos/1183099/pexels-photo-1183
 @media only screen and (max-device-width: 1366px) {
   .parallax {
     background-attachment: scroll;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hide-if-small-screen {
+    display: none;
   }
 }
 
@@ -352,3 +406,10 @@ a {
     padding: 5px;
 }
 /* End code folding */
+
+
+
+
+
+/*bootstrap columns*/
+
