changing small hide screen

--- a/themes/hugo-future-imperfect-slim/layouts/about/list.html
+++ b/themes/hugo-future-imperfect-slim/layouts/about/list.html
@@ -8,8 +8,9 @@
       <main id="site-main">
 <div style="background:#000000;color:white!important;height:1000px;">      
         <br>
-        <div style="height:600px;">
+        <div style="height:500px;">
         {{ partial "site-intro-about" . }}</div>
+<div class="hide-if-small-screen" style="padding-top: 5%">
 <div align="center">        
 <svg width="1000" height="100">
 <line x1="0" y1="50" x2="1000" y2="50" style="stroke:#ffffff; stroke-width:1.5" />
@@ -34,6 +35,9 @@
 </svg>
 </div>
 </div>
+</div>
+
+
         <article class="post about-me">
           <header>
             <div class="title">
