--- a/themes/hugo-future-imperfect-slim/layouts/partials/meta.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/meta.html
@@ -1,8 +1,10 @@
 <meta charset="utf-8">
 <title>{{ .Title }}{{ if ne .Title .Site.Title }} - {{ .Site.Title }}{{ end }}</title>
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.meta.description }}{{ . }}{{ end }}{{ end }}">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
 <!-- TODO: Do we want to add rel=author? -->
+
+
 {{ if .Site.Params.meta.favicon }}
   <link rel="apple-touch-icon" sizes="180x180" href="{{ "favicon/apple-touch-icon.png" | relURL}}{{ with .Site.Params.meta.faviconVersion }}?v={{ . }}{{ end }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon/favicon-32x32.png" | relURL}}{{ with .Site.Params.meta.faviconVersion }}?v={{ . }}{{ end }}">
