pushing old changes

--- a/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
@@ -85,7 +85,7 @@ a self taught developer, investor, and data scientist. <br><br>
 
 Outside of work, I'm a mountain man. I live in Breckenridge, Colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town. 
 
-I have a degree in finance & led a few non-profits during college. the most successful endeavor, bears go bald, raised over $60,000 for children's cancer research.<br><br>
+I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
 
 <!-- bill gates and warren buffett serve the world in a way i aspire to; spending the first half of their lives accumulating wealth, & the second half giving it all away. -->
 
