removing emi as it wont work for use case

--- a/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
@@ -93,7 +93,7 @@ Professionally, I'm an associate engineer @ Mastercard. i'm part of their econom
 recently i've been working on a macroeconomic recession model & an html business proposal for the c-suite. previously, I was a consultant at FactSet
 where I worked with institutional asset managers on their quant workflows.  
 
-you can learn more about my coding journey <a href="/blog/what-got-me-into-coding/" style="color:#2ebaae;">here</a>.
+you can learn more about my coding journey <a href="/blog/what-got-me-into-coding/">here</a>.
 
 feel free to <a href="/contact" style="color:#2ebaae;">contact me</a> about equity research, data science, or future opportunities. 
 </p>
