pushing changes to home page

--- a/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
@@ -87,13 +87,14 @@ Outside of work, I'm a mountain man. I live in Breckenridge, Colorado & can usua
 
 I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;" target="_blank">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
 
-<!-- bill gates and warren buffett serve the world in a way i aspire to; spending the first half of their lives accumulating wealth, & the second half giving it all away. -->
-
 Professionally, I'm an associate engineer @ Mastercard. i'm part of their economics institute & mainly focus on data science & web development.
 recently i've been working on a macroeconomic recession model & an html business proposal for the c-suite. previously, I was a consultant at FactSet
 where I worked with institutional asset managers on their quant workflows.  
 
-you can learn more about my coding journey <a href="/blog/what-got-me-into-coding/">here</a>.
+
+<!-- you can learn more about my coding journey <a href="/blog/what-got-me-into-coding/">here</a>. -->
+
+<br><br>
 
 feel free to <a href="/contact" style="color:#2ebaae;">contact me</a> about equity research, data science, or future opportunities. 
 </p>
