--- a/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
+++ b/themes/hugo-future-imperfect-slim/layouts/partials/skills.html
@@ -85,7 +85,7 @@ a self taught developer, investor, and data scientist. <br><br>
 
 Professionally, I'm a data scientist @ Mastercard. i'm part of their economics institute & mainly focus on data science & web development. previously, I was a consultant at FactSet where I worked with investment managers on their quant workflows.  <br><br>
 
-Outside of work, I'm a mountain man. I live in Breckenridge, Colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town. I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;" target="_blank">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
+Outside of work, I'm a mountain man. I live in Evergreen, Colorado & can usually be found with my pup (winston) up a mountain, woodworking, or coding. I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;" target="_blank">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
 
 <!-- 
 at work, i've been working on a macroeconomic recession model & an html business proposal for the c-suite
